--- a/CarValet/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/CarValet/en.lproj/MainStoryboard_iPhone.storyboard
@@ -12,22 +12,98 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Total Cars: 999" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9X8-fG-4R6">
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="280" id="fdW-rs-siT"/>
-                                </constraints>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Total Cars: 0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9X8-fG-4R6">
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oeF-x4-6da">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="73" id="yIX-wg-ehE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="New Car">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="newCar:" destination="2" eventType="touchUpInside" id="Pe1-sx-a5y"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tuI-9q-9cG">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="00K-GG-CT0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jcm-6m-5UL">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="HgU-xp-yWs"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yhE-jg-PNu">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="111" id="Ynu-7Q-kXJ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Previous Car">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="prevCar:" destination="2" eventType="touchUpInside" id="rFR-xc-iWX"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a94-Gd-G9c">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="111" id="siq-1z-U5N"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Next Car">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="nextCar:" destination="2" eventType="touchUpInside" id="Oi8-R1-QGe"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="9X8-fG-4R6" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="28" id="7d7-GG-7oW"/>
+                            <constraint firstAttribute="trailing" secondItem="a94-Gd-G9c" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="30B-Mz-GI1"/>
+                            <constraint firstItem="oeF-x4-6da" firstAttribute="centerX" secondItem="9X8-fG-4R6" secondAttribute="centerX" type="default" id="DG5-YZ-ZIu"/>
+                            <constraint firstItem="yhE-jg-PNu" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="DLA-U6-db7"/>
+                            <constraint firstItem="a94-Gd-G9c" firstAttribute="top" secondItem="oeF-x4-6da" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="JNo-rR-ymM"/>
+                            <constraint firstItem="Jcm-6m-5UL" firstAttribute="top" secondItem="tuI-9q-9cG" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="LHE-xr-mGB"/>
+                            <constraint firstItem="9X8-fG-4R6" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="LHW-HO-426"/>
+                            <constraint firstAttribute="trailing" secondItem="9X8-fG-4R6" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="Lgb-f9-Vyy"/>
+                            <constraint firstAttribute="bottom" secondItem="a94-Gd-G9c" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="PaG-kH-OKC"/>
+                            <constraint firstItem="tuI-9q-9cG" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Qxm-lL-h9G"/>
+                            <constraint firstAttribute="bottom" secondItem="yhE-jg-PNu" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="UjM-JZ-fBm"/>
+                            <constraint firstItem="Jcm-6m-5UL" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="aIp-Tq-NFE"/>
                             <constraint firstItem="9X8-fG-4R6" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="dHx-5k-7JI"/>
+                            <constraint firstItem="Jcm-6m-5UL" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="gln-vz-g6m"/>
+                            <constraint firstItem="tuI-9q-9cG" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="uoJ-k3-aAU"/>
+                            <constraint firstItem="tuI-9q-9cG" firstAttribute="top" secondItem="9X8-fG-4R6" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="zSy-hR-caQ"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="totalCarLable" destination="9X8-fG-4R6" id="wVH-1k-Qan"/>
+                        <outlet property="carInfoLabel" destination="Jcm-6m-5UL" id="JgR-tF-XIQ"/>
+                        <outlet property="numberCarLabel" destination="tuI-9q-9cG" id="tgt-fc-25v"/>
+                        <outlet property="totalCarLabel" destination="9X8-fG-4R6" id="sFD-os-67s"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
