Fix the issue with multiline label when rotating to landscape

--- a/CarValet/Base.lproj/MainStoryboard_iPhone.storyboard
+++ b/CarValet/Base.lproj/MainStoryboard_iPhone.storyboard
@@ -165,16 +165,16 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bnB-FL-knc" userLabel="AddNewCarViewGroup">
                                 <subviews>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Total Cars: 0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9X8-fG-4R6">
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Total Cars: 0" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="9X8-fG-4R6">
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="17" id="xjD-N6-hix"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="17" type="user" id="oTE-tU-d7W"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oeF-x4-6da">
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="41" id="1cX-D2-e6b"/>
+                                            <constraint firstAttribute="height" constant="41" type="user" id="1cX-D2-e6b"/>
                                             <constraint firstAttribute="width" constant="86" id="8L8-4d-lgT"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
@@ -192,12 +192,13 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="oeF-x4-6da" secondAttribute="bottom" constant="1" id="LrT-He-oxw"/>
+                                    <constraint firstAttribute="bottom" secondItem="oeF-x4-6da" secondAttribute="bottom" constant="1" id="7t9-Tb-bQD"/>
+                                    <constraint firstItem="oeF-x4-6da" firstAttribute="top" relation="greaterThanOrEqual" secondItem="9X8-fG-4R6" secondAttribute="bottom" type="user" id="HPx-RB-inb"/>
                                     <constraint firstItem="oeF-x4-6da" firstAttribute="leading" secondItem="bnB-FL-knc" secondAttribute="leading" type="default" id="MoR-O4-SwY"/>
                                     <constraint firstAttribute="height" constant="86" type="user" id="ems-Qk-THu"/>
-                                    <constraint firstItem="9X8-fG-4R6" firstAttribute="leading" secondItem="bnB-FL-knc" secondAttribute="leading" type="default" id="l5Q-0X-ksI"/>
-                                    <constraint firstItem="9X8-fG-4R6" firstAttribute="trailing" secondItem="bnB-FL-knc" secondAttribute="trailing" type="default" id="lnf-rf-R6K"/>
-                                    <constraint firstItem="9X8-fG-4R6" firstAttribute="top" secondItem="bnB-FL-knc" secondAttribute="top" type="default" id="nfq-OH-fTk"/>
+                                    <constraint firstItem="9X8-fG-4R6" firstAttribute="leading" secondItem="bnB-FL-knc" secondAttribute="leading" type="user" id="ifs-Zz-nDn"/>
+                                    <constraint firstItem="9X8-fG-4R6" firstAttribute="trailing" secondItem="bnB-FL-knc" secondAttribute="trailing" type="user" id="lJ3-qg-eOY"/>
+                                    <constraint firstItem="9X8-fG-4R6" firstAttribute="top" secondItem="bnB-FL-knc" secondAttribute="top" type="user" id="nfq-OH-fTk"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Qj-IM-hF0" userLabel="Car View Group">
@@ -269,19 +270,22 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstItem="Hql-07-luR" firstAttribute="top" secondItem="a94-Gd-G9c" secondAttribute="top" type="default" id="0y0-i5-7Jb"/>
                                     <constraint firstItem="yhE-jg-PNu" firstAttribute="leading" secondItem="8Qj-IM-hF0" secondAttribute="leading" type="default" id="1SV-AR-s1V"/>
                                     <constraint firstItem="Jcm-6m-5UL" firstAttribute="trailing" secondItem="8Qj-IM-hF0" secondAttribute="trailing" type="default" id="3Un-Ns-vRs"/>
-                                    <constraint firstItem="Hql-07-luR" firstAttribute="bottom" secondItem="8Qj-IM-hF0" secondAttribute="bottom" type="default" id="IgA-yn-e8g"/>
+                                    <constraint firstItem="Hql-07-luR" firstAttribute="top" secondItem="yhE-jg-PNu" secondAttribute="top" type="default" id="Ffg-ft-IFo"/>
                                     <constraint firstItem="Hql-07-luR" firstAttribute="centerX" secondItem="Jcm-6m-5UL" secondAttribute="centerX" type="default" id="JQH-dl-Ew0"/>
                                     <constraint firstItem="Jcm-6m-5UL" firstAttribute="top" secondItem="tuI-9q-9cG" secondAttribute="bottom" constant="35" type="user" id="RkZ-zc-XQa"/>
+                                    <constraint firstItem="a94-Gd-G9c" firstAttribute="baseline" secondItem="yhE-jg-PNu" secondAttribute="baseline" type="default" id="TYM-N1-uIE"/>
+                                    <constraint firstAttribute="bottom" secondItem="yhE-jg-PNu" secondAttribute="bottom" constant="1" id="V19-7l-gt1"/>
                                     <constraint firstItem="Jcm-6m-5UL" firstAttribute="leading" secondItem="8Qj-IM-hF0" secondAttribute="leading" type="default" id="ZGB-de-Qri"/>
                                     <constraint firstItem="tuI-9q-9cG" firstAttribute="trailing" secondItem="8Qj-IM-hF0" secondAttribute="trailing" type="default" id="ZKa-YI-aWF"/>
+                                    <constraint firstItem="yhE-jg-PNu" firstAttribute="baseline" secondItem="Hql-07-luR" secondAttribute="baseline" type="default" id="bdl-bF-oDd"/>
                                     <constraint firstItem="tuI-9q-9cG" firstAttribute="leading" secondItem="8Qj-IM-hF0" secondAttribute="leading" type="default" id="dWI-zH-qkh"/>
                                     <constraint firstItem="tuI-9q-9cG" firstAttribute="top" secondItem="8Qj-IM-hF0" secondAttribute="top" type="user" id="kUm-9w-CAW"/>
-                                    <constraint firstItem="yhE-jg-PNu" firstAttribute="bottom" secondItem="8Qj-IM-hF0" secondAttribute="bottom" type="default" id="nvB-gi-nS8"/>
                                     <constraint firstItem="a94-Gd-G9c" firstAttribute="trailing" secondItem="8Qj-IM-hF0" secondAttribute="trailing" type="default" id="ogv-TO-vGT"/>
+                                    <constraint firstItem="Hql-07-luR" firstAttribute="baseline" secondItem="a94-Gd-G9c" secondAttribute="baseline" type="default" id="pXY-bM-aq9"/>
                                     <constraint firstItem="Jcm-6m-5UL" firstAttribute="top" secondItem="8Qj-IM-hF0" secondAttribute="top" constant="55" type="user" id="rBW-WF-oH0"/>
-                                    <constraint firstItem="a94-Gd-G9c" firstAttribute="bottom" secondItem="8Qj-IM-hF0" secondAttribute="bottom" type="default" id="tcc-qO-fdO"/>
                                     <constraint firstItem="tuI-9q-9cG" firstAttribute="top" secondItem="8Qj-IM-hF0" secondAttribute="top" type="user" id="xGH-Qs-lt7"/>
                                 </constraints>
                             </view>
